fix slider alignment

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -374,10 +374,10 @@ h1 {
 .slider::before {
   content: "";
   position: absolute;
-  top: 3px;
+  top: 2px;
   left: 3px;
   width: 24px;
-  height: 16px;
+  height: 15px;
   background: #c0c0c0;
   border-top: 1px solid #fff;
   border-left: 1px solid #fff;
